--- a/Taxi-environment.ipynb
+++ b/Taxi-environment.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Basic Q-Learning Algorithm"
    ]
@@ -15,13 +18,14 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import gym"
+    "import sys\n",
+    "import gym\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,12 +34,78 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-11-07 13:53:29,229] Making new env: Taxi-v2\n"
+      "[2017-11-07 16:44:47,943] Making new env: Taxi-v2\n"
      ]
     }
    ],
    "source": [
     "env = gym.make('Taxi-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_states = env.observation_space.n\n",
+    "num_actions = env.action_space.n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Q = np.zeros(shape=[num_states, num_actions])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = 0.5   # discount term\n",
+    "l = 0.01  # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episodes: 10,000\tReward: 20\tG=9\tTotal rewards: 83,89171"
+     ]
+    }
+   ],
+   "source": [
+    "total_rewards = 0\n",
+    "for episode in range(1, 10000):\n",
+    "    done = False\n",
+    "    G, reward = 0,0\n",
+    "    state = env.reset()\n",
+    "    while done != True:\n",
+    "        action = np.argmax(Q[state]) #1\n",
+    "        state2, reward, done, info = env.step(action) #2\n",
+    "        Q[state,action] += y * (reward + np.max(Q[state2]) - Q[state,action]) #3\n",
+    "        G += reward\n",
+    "        total_rewards += reward\n",
+    "        state = state2\n",
+    "        sys.stdout.write('\\rEpisodes: {:,}\\tReward: {:,}\\tG={:,}\\tTotal rewards: {:,}'.format(episode+1, reward, G, total_rewards))"
    ]
   },
   {
