--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-11-17 12:07:51,202] Making new env: Taxi-v2\n"
+      "[2017-11-17 12:19:50,261] Making new env: Taxi-v2\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 10,000\tR: 15\tTotal rewards: 50,411"
+      "Episode: 10,000\tR: 10\tTotal rewards: 50,1962"
      ]
     }
    ],
@@ -101,6 +101,7 @@
     "    while not done:\n",
     "        action = np.argmax(Q[state])\n",
     "        state1, reward, done, _ = env.step(action)\n",
+    "        # Q[state, action] += gamma * (reward + np.max(Q[state1]) - Q[state, action])\n",
     "        Q[state, action] += gamma * (reward + np.max(Q[state1]) - Q[state, action])\n",
     "        R += reward\n",
     "        total_rewards += reward\n",
@@ -122,11 +123,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|R: | : :G|\n",
+      "|\u001b[35m\u001b[42mR\u001b[0m\u001b[0m: | : :G|\n",
       "| : : : : |\n",
       "| : : : : |\n",
       "| | : | : |\n",
-      "|\u001b[35m\u001b[42mY\u001b[0m\u001b[0m| : |B: |\n",
+      "|Y| : |B: |\n",
       "+---------+\n",
       "  (Dropoff)\n"
      ]
@@ -135,6 +136,60 @@
    "source": [
     "env.render()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -5.00000000e-01,  -5.00000000e-01,  -5.00000000e-01,\n",
+       "        -5.00000000e-01,  -5.00000000e+00,   2.49000000e+04])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q[state]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16, 5)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state, action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
