--- a/Taxi-environment.ipynb
+++ b/Taxi-environment.ipynb
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-11-14 11:39:46,318] Making new env: Taxi-v2\n"
+      "[2017-11-17 14:51:25,625] Making new env: Taxi-v2\n"
      ]
     }
    ],
@@ -60,11 +60,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[35mR\u001b[0m: | : :\u001b[34;1mG\u001b[0m|\n",
+      "|R: | : :\u001b[35mG\u001b[0m|\n",
       "| : : : :\u001b[43m \u001b[0m|\n",
       "| : : : : |\n",
       "| | : | : |\n",
-      "|Y| : |B: |\n",
+      "|\u001b[34;1mY\u001b[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -111,8 +111,8 @@
    },
    "outputs": [],
    "source": [
-    "y = 0.5   # discount term\n",
-    "l = 0.01  # learning rate"
+    "gamma = 0.5   # discount term (µ)\n",
+    "LR = 0.01     # learning rate"
    ]
   },
   {
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episodes: 10,000\tReward: 20\tG: 8\tTotal rewards: 49,86747"
+      "Episodes: 10,000\tReward: 20\tG: 10\tTotal rewards: 51,1088"
      ]
     }
    ],
@@ -140,8 +140,8 @@
     "    state = env.reset()\n",
     "    while done != True:\n",
     "        action = np.argmax(Q[state]) #1\n",
-    "        state2, reward, done, info = env.step(action) #2\n",
-    "        Q[state, action] += y * (reward + np.max(Q[state2]) - Q[state, action]) #3\n",
+    "        state2, reward, done, info = env.step(action) #2s\n",
+    "        Q[state, action] += gamma * (reward + np.max(Q[state2]) - Q[state, action]) #3\n",
     "        G += reward\n",
     "        total_rewards += reward\n",
     "        state = state2\n",
@@ -158,42 +158,65 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [ -3.32812500e+00,  -3.50000000e+00,  -3.87890625e+00,\n",
-       "         -3.50000000e+00,   2.45477028e+04,  -5.00000000e+00],\n",
-       "       [ -3.01562500e+00,  -3.00000000e+00,  -3.72656250e+00,\n",
-       "         -3.00000000e+00,   2.43815799e+04,  -5.00000000e+00],\n",
-       "       ..., \n",
-       "       [ -2.50000000e+00,  -2.12500000e+00,  -2.50000000e+00,\n",
-       "         -2.75000000e+00,  -5.00000000e+00,  -5.00000000e+00],\n",
-       "       [ -4.50000000e+00,  -4.81494141e+00,  -4.50000000e+00,\n",
-       "         -4.89575195e+00,  -5.00000000e+00,  -5.00000000e+00],\n",
-       "       [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00,\n",
-       "          4.25000000e+00,  -5.00000000e+00,  -5.00000000e+00]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :G|\n",
+      "| : : : : |\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|\u001b[35m\u001b[42mY\u001b[0m\u001b[0m| : |B: |\n",
+      "+---------+\n",
+      "  (Dropoff)\n"
+     ]
     }
    ],
    "source": [
-    "Q"
+    "env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q[state]:\n",
+      "[ -5.00000000e-01  -5.00000000e-01  -5.00000000e-01  -5.00000000e-01\n",
+      "  -5.00000000e+00   2.57200000e+04]\n",
+      "\n",
+      "Q[state, action]: 25720.0\n",
+      "\n",
+      "reward = 20\tinfo = {'prob': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'\\nQ[state]:\\n{Q[state]}')\n",
+    "\n",
+    "print(f'\\nQ[state, action]: {Q[state, action]}')\n",
+    "\n",
+    "print(f'\\nreward = {reward}\\tinfo = {info}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "env.close()"
+   ]
   }
  ],
  "metadata": {
