--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -106,8 +106,8 @@
     "        R += reward\n",
     "        total_rewards += reward\n",
     "        state = state1\n",
-    "    sys.stdout.write(f'\\rEpisode: {episode:,}\\tR: {R:,}\\tTotal rewards: {total_rewards:,}')\n",
-    "    sys.stdout.flush()"
+    "        sys.stdout.write(f'\\rEpisode: {episode:,}\\tR: {R:,}\\tTotal rewards: {total_rewards:,}')\n",
+    "        sys.stdout.flush()"
    ]
   },
   {
@@ -139,47 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ -5.00000000e-01,  -5.00000000e-01,  -5.00000000e-01,\n",
-       "        -5.00000000e-01,  -5.00000000e+00,   2.49000000e+04])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q[state]:\n",
+      " [ -5.00000000e-01  -5.00000000e-01  -5.00000000e-01  -5.00000000e-01\n",
+      "  -5.00000000e+00   2.49000000e+04]\n",
+      "\n",
+      "Q[state, action]: 24900.0\n",
+      "\n",
+      "State: 16\t Action: 5\t Reward: 20\n"
+     ]
     }
    ],
    "source": [
-    "Q[state]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16, 5)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state, action"
+    "print(f'\\nQ[state]:\\n {Q[state]}')\n",
+    "\n",
+    "print(f'\\nQ[state, action]: {Q[state, action]}')\n",
+    "\n",
+    "print(f'\\nState: {state}\\t Action: {action}\\t Reward: {reward}')"
    ]
   },
   {
@@ -189,7 +174,9 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "env.close()"
+   ]
   },
   {
    "cell_type": "code",
