Messing with Bellman's Equation

--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -17,14 +19,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-11-17 12:19:50,261] Making new env: Taxi-v2\n"
+      "[2017-11-17 14:58:02,718] Making new env: Taxi-v2\n"
      ]
     }
    ],
@@ -36,7 +40,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -57,7 +63,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -68,7 +76,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -79,14 +89,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 10,000\tR: 10\tTotal rewards: 50,1962"
+      "Episode: 10,000\tR: 11\tTotal rewards: 50,514"
      ]
     }
    ],
@@ -106,8 +118,8 @@
     "        R += reward\n",
     "        total_rewards += reward\n",
     "        state = state1\n",
-    "        sys.stdout.write(f'\\rEpisode: {episode:,}\\tR: {R:,}\\tTotal rewards: {total_rewards:,}')\n",
-    "        sys.stdout.flush()"
+    "    sys.stdout.write(f'\\rEpisode: {episode:,}\\tR: {R:,}\\tTotal rewards: {total_rewards:,}')\n",
+    "    sys.stdout.flush()"
    ]
   },
   {
@@ -115,6 +127,8 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -123,11 +137,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[35m\u001b[42mR\u001b[0m\u001b[0m: | : :G|\n",
+      "|R: | : :G|\n",
       "| : : : : |\n",
       "| : : : : |\n",
       "| | : | : |\n",
-      "|Y| : |B: |\n",
+      "|Y| : |\u001b[35m\u001b[42mB\u001b[0m\u001b[0m: |\n",
       "+---------+\n",
       "  (Dropoff)\n"
      ]
@@ -139,9 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -151,11 +167,11 @@
       "\n",
       "Q[state]:\n",
       " [ -5.00000000e-01  -5.00000000e-01  -5.00000000e-01  -5.00000000e-01\n",
-      "  -5.00000000e+00   2.49000000e+04]\n",
+      "  -5.00000000e+00   2.50400000e+04]\n",
       "\n",
-      "Q[state, action]: 24900.0\n",
+      "Q[state, action]: 25040.0\n",
       "\n",
-      "State: 16\t Action: 5\t Reward: 20\n"
+      "State: 479\t Action: 5\t Reward: 20\n"
      ]
     }
    ],
@@ -169,9 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -182,7 +200,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
