--- a/Q-network.ipynb
+++ b/Q-network.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 2,104\tRewards: -108\t%success: -4906.70%"
+      "Episode: 4,999\tRewards: -144\t%success: -11446.46%"
      ]
     }
    ],
@@ -165,14 +165,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|\u001b[34;1mR\u001b[0m: | : :\u001b[35mG\u001b[0m|\n",
+      "| : : : : |\n",
+      "| : : : :\u001b[43m \u001b[0m|\n",
+      "| | : | : |\n",
+      "|Y| : |B: |\n",
+      "+---------+\n",
+      "  (East)\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-90.59575653, -90.5747757 , -90.54410553, -90.56853485,\n",
+       "        -98.0683136 , -99.59447479]], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "env.render()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
