--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -17,42 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2017-11-17 14:58:02,718] Making new env: Taxi-v2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make('Taxi-v2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "States: 500 & Actions: 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_states = env.observation_space.n\n",
     "n_actions = env.action_space.n\n",
@@ -61,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -74,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -82,28 +66,21 @@
    },
    "outputs": [],
    "source": [
-    "gamma = 0.5"
+    "lr = 0.1\n",
+    "y = 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode: 10,000\tR: 11\tTotal rewards: 50,514"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "episodes = 10000\n",
+    "episodes = 5000\n",
     "total_rewards = 0  # Total rewards for all episodes\n",
     "\n",
     "for episode in range(1, episodes+1):\n",
@@ -113,8 +90,8 @@
     "    while not done:\n",
     "        action = np.argmax(Q[state])\n",
     "        state1, reward, done, _ = env.step(action)\n",
-    "        # Q[state, action] += gamma * (reward + np.max(Q[state1]) - Q[state, action])\n",
-    "        Q[state, action] += gamma * (reward + np.max(Q[state1]) - Q[state, action])\n",
+    "#         Q[state, action] += lr * ((reward + (y * np.max(Q[state1, action])) - Q[state, action]))\n",
+    "        Q[state, action] += lr * (reward + y * np.max(Q[state1, action]) - Q[state, action])\n",
     "        R += reward\n",
     "        total_rewards += reward\n",
     "        state = state1\n",
@@ -124,57 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+\n",
-      "|R: | : :G|\n",
-      "| : : : : |\n",
-      "| : : : : |\n",
-      "| | : | : |\n",
-      "|Y| : |\u001b[35m\u001b[42mB\u001b[0m\u001b[0m: |\n",
-      "+---------+\n",
-      "  (Dropoff)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Q[state]:\n",
-      " [ -5.00000000e-01  -5.00000000e-01  -5.00000000e-01  -5.00000000e-01\n",
-      "  -5.00000000e+00   2.50400000e+04]\n",
-      "\n",
-      "Q[state, action]: 25040.0\n",
-      "\n",
-      "State: 479\t Action: 5\t Reward: 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'\\nQ[state]:\\n {Q[state]}')\n",
     "\n",
@@ -185,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
