Trying different value update

--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -17,26 +17,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-11-20 17:52:37,681] Making new env: Taxi-v2\n"
+     ]
+    }
+   ],
    "source": [
     "env = gym.make('Taxi-v2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States: 500 & Actions: 6\n"
+     ]
+    }
+   ],
    "source": [
     "n_states = env.observation_space.n\n",
     "n_actions = env.action_space.n\n",
@@ -45,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -58,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -72,13 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode: 5,000\tR: 2\tTotal rewards: -93,1435664"
+     ]
+    }
+   ],
    "source": [
     "episodes = 5000\n",
     "total_rewards = 0  # Total rewards for all episodes\n",
@@ -91,7 +115,7 @@
     "        action = np.argmax(Q[state])\n",
     "        state1, reward, done, _ = env.step(action)\n",
     "#         Q[state, action] += lr * ((reward + (y * np.max(Q[state1, action])) - Q[state, action]))\n",
-    "        Q[state, action] += lr * (reward + y * np.max(Q[state1, action]) - Q[state, action])\n",
+    "        Q[state, action] += lr * (reward + y * np.max(Q[state1]) - Q[state, action])\n",
     "        R += reward\n",
     "        total_rewards += reward\n",
     "        state = state1\n",
@@ -101,27 +125,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :\u001b[35m\u001b[42mG\u001b[0m\u001b[0m|\n",
+      "| : : : : |\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|Y| : |B: |\n",
+      "+---------+\n",
+      "  (Dropoff)\n"
+     ]
+    }
+   ],
    "source": [
     "env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q[state]:\n",
+      " [ -0.1  -0.1  -0.1  -0.1  -1.   40. ]\n",
+      "\n",
+      "Q[state, action]: 39.99999999999993\n",
+      "\n",
+      "State: 97\t Action: 5\t Reward: 20\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'\\nQ[state]:\\n {Q[state]}')\n",
     "\n",
