Recording reward-transition values

--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -1,16 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Simple Q Learner"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "import gym\n",
     "import numpy as np"
    ]
@@ -19,16 +25,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-11-20 17:52:37,681] Making new env: Taxi-v2\n"
+      "[2017-11-20 18:17:08,802] Making new env: Taxi-v2\n"
      ]
     }
    ],
@@ -40,169 +44,164 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "States: 500 & Actions: 6\n"
+      "States: 500\tActions: 6\n"
      ]
     }
    ],
    "source": [
     "n_states = env.observation_space.n\n",
     "n_actions = env.action_space.n\n",
-    "print(f'States: {n_states} & Actions: {n_actions}')"
+    "print(f'States: {n_states:,}\\tActions: {n_actions:,}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "Q = np.zeros(shape=[n_states, n_actions])"
+    "# Initializing the Q-matrix\n",
+    "Q = np.zeros(shape=[n_states, n_actions])\n",
+    "# Learning rate\n",
+    "lr = 0.1\n",
+    "# Discount factor\n",
+    "y = 0.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode: 10,000\tTotal reward: -200Transitions: 200"
+     ]
+    }
+   ],
    "source": [
-    "lr = 0.1\n",
-    "y = 0.5"
+    "# how many episodes\n",
+    "episodes = 10000\n",
+    "# number of times an agent performs a transition\n",
+    "transitions = []\n",
+    "# all total rewards\n",
+    "rewards = []\n",
+    "\n",
+    "for episode in range(episodes):\n",
+    "    done = False\n",
+    "    state = env.reset()\n",
+    "    n_transition = 0\n",
+    "    total_reward = 0\n",
+    "    while not done:\n",
+    "        n_transition += 1\n",
+    "        action = np.argmax(Q[state])\n",
+    "        state1, reward, done, _ = env.step(action)\n",
+    "        # Update Q value\n",
+    "        Q[state, action] += lr * (reward + y * np.max(Q[state1]) - Q[state, action])\n",
+    "        total_reward += reward\n",
+    "    # Record all transitions and rewards collected\n",
+    "    transitions.append(n_transition)\n",
+    "    rewards.append(total_reward)\n",
+    "    sys.stdout.write(f'\\rEpisode: {episode+1:,}\\tTotal reward: {total_reward:,}\\t'\n",
+    "                     f'Transitions: {n_transition:,}')\n",
+    "    sys.stdout.flush()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 5,000\tR: 2\tTotal rewards: -93,1435664"
+      "Maximum »»» Transitions: 200\tReward: -200\n",
+      "Minimum »»» Transitions: 200\tReward: -236\n"
      ]
     }
    ],
    "source": [
-    "episodes = 5000\n",
-    "total_rewards = 0  # Total rewards for all episodes\n",
-    "\n",
-    "for episode in range(1, episodes+1):\n",
-    "    done = False\n",
-    "    R = 0  # total rewards for each episodes\n",
-    "    state = env.reset()\n",
-    "    while not done:\n",
-    "        action = np.argmax(Q[state])\n",
-    "        state1, reward, done, _ = env.step(action)\n",
-    "#         Q[state, action] += lr * ((reward + (y * np.max(Q[state1, action])) - Q[state, action]))\n",
-    "        Q[state, action] += lr * (reward + y * np.max(Q[state1]) - Q[state, action])\n",
-    "        R += reward\n",
-    "        total_rewards += reward\n",
-    "        state = state1\n",
-    "    sys.stdout.write(f'\\rEpisode: {episode:,}\\tR: {R:,}\\tTotal rewards: {total_rewards:,}')\n",
-    "    sys.stdout.flush()"
+    "# maximum transitions & reward\n",
+    "max_transition = max(transitions)\n",
+    "max_reward = max(rewards)\n",
+    "# minimum transitions & reward\n",
+    "min_transition = min(transitions)\n",
+    "min_reward = min(rewards)\n",
+    "print(f'Maximum »»» Transitions: {max_transition:,}\\tReward: {max_reward:,}')\n",
+    "print(f'Minimum »»» Transitions: {min_transition:,}\\tReward: {min_reward:,}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+\n",
-      "|R: | : :\u001b[35m\u001b[42mG\u001b[0m\u001b[0m|\n",
-      "| : : : : |\n",
-      "| : : : : |\n",
-      "| | : | : |\n",
-      "|Y| : |B: |\n",
-      "+---------+\n",
-      "  (Dropoff)\n"
+      "Reward at max transition: -218\n",
+      "Reward at min transition: -218\n"
      ]
     }
    ],
    "source": [
-    "env.render()"
+    "# Reward @ maximum transition\n",
+    "reward_max_trans = rewards[transitions.index(max_transition)]\n",
+    "# Reward @ minimum transition\n",
+    "reward_min_trans = rewards[transitions.index(min_transition)]\n",
+    "print(f'Reward at max transition: {reward_max_trans:,}')\n",
+    "print(f'Reward at min transition: {reward_min_trans:,}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Q[state]:\n",
-      " [ -0.1  -0.1  -0.1  -0.1  -1.   40. ]\n",
-      "\n",
-      "Q[state, action]: 39.99999999999993\n",
-      "\n",
-      "State: 97\t Action: 5\t Reward: 20\n"
+      "Transition at max reward: 200\n",
+      "Transition at min reward: 200\n"
      ]
     }
    ],
    "source": [
-    "print(f'\\nQ[state]:\\n {Q[state]}')\n",
-    "\n",
-    "print(f'\\nQ[state, action]: {Q[state, action]}')\n",
-    "\n",
-    "print(f'\\nState: {state}\\t Action: {action}\\t Reward: {reward}')"
+    "# Transition @ maximum reward\n",
+    "trans_max_reward = transitions[rewards.index(max_reward)]\n",
+    "# Transition @ minimum reward\n",
+    "trans_min_reward = transitions[rewards.index(min_reward)]\n",
+    "print(f'Transition at max reward: {trans_max_reward:,}')\n",
+    "print(f'Transition at min reward: {trans_min_reward:,}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "env.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
