--- a/Simple Q Learner.ipynb
+++ b/Simple Q Learner.ipynb
@@ -32,12 +32,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-11-20 18:17:08,802] Making new env: Taxi-v2\n"
+      "[2017-11-20 19:01:25,746] Making new env: FrozenLake-v0\n"
      ]
     }
    ],
    "source": [
-    "env = gym.make('Taxi-v2')"
+    "env = gym.make('FrozenLake-v0')"
    ]
   },
   {
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "States: 500\tActions: 6\n"
+      "States: 16\tActions: 4\n"
      ]
     }
    ],
@@ -81,14 +81,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 10,000\tTotal reward: -200Transitions: 200"
+      "Episode: 10,000\tTotal reward: 0.0\tTransitions: 34"
      ]
     }
    ],
@@ -111,6 +112,8 @@
     "        state1, reward, done, _ = env.step(action)\n",
     "        # Update Q value\n",
     "        Q[state, action] += lr * (reward + y * np.max(Q[state1]) - Q[state, action])\n",
+    "        # Update states\n",
+    "        state = state1\n",
     "        total_reward += reward\n",
     "    # Record all transitions and rewards collected\n",
     "    transitions.append(n_transition)\n",
@@ -131,8 +134,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum »»» Transitions: 200\tReward: -200\n",
-      "Minimum »»» Transitions: 200\tReward: -236\n"
+      "  (Left)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "\u001b[41mH\u001b[0mFFG\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum »»» Transitions: 100\tReward: 0.0\n",
+      "Minimum »»» Transitions: 3\tReward: 0.0\n"
      ]
     }
    ],
@@ -149,31 +176,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reward at max transition: -218\n",
-      "Reward at min transition: -218\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reward @ maximum transition\n",
-    "reward_max_trans = rewards[transitions.index(max_transition)]\n",
-    "# Reward @ minimum transition\n",
-    "reward_min_trans = rewards[transitions.index(min_transition)]\n",
-    "print(f'Reward at max transition: {reward_max_trans:,}')\n",
-    "print(f'Reward at min transition: {reward_min_trans:,}')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": false
@@ -183,16 +185,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transition at max reward: 200\n",
-      "Transition at min reward: 200\n"
+      "Episode with maximum »»» transition: 2,846\t\t reward: 0\n",
+      "Episode with minimum »»» transition: 0\t reward: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Episode with max & min rewards\n",
+    "reward_max_episode = rewards.index(max_reward)\n",
+    "reward_min_episode = rewards.index(min_reward)\n",
+    "# Episode with max & min transitions\n",
+    "trans_max_episode = transitions.index(max_transition)\n",
+    "trans_min_episode = transitions.index(min_transition)\n",
+    "print(f'Episode with maximum »»» transition: {trans_max_episode:,}\\t\\t reward: {reward_max_episode:,}')\n",
+    "print(f'Episode with minimum »»» transition: {trans_min_episode:,}\\t reward: {reward_min_episode:,}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward at max transition: 0.0\n",
+      "Reward at min transition: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reward @ maximum transition\n",
+    "reward_max_trans = rewards[trans_max_episode]\n",
+    "# Reward @ minimum transition\n",
+    "reward_min_trans = rewards[trans_min_episode]\n",
+    "print(f'Reward at max transition: {reward_max_trans:,}')\n",
+    "print(f'Reward at min transition: {reward_min_trans:,}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transition at max reward: 3\n",
+      "Transition at min reward: 3\n"
      ]
     }
    ],
    "source": [
     "# Transition @ maximum reward\n",
-    "trans_max_reward = transitions[rewards.index(max_reward)]\n",
+    "trans_max_reward = transitions[reward_max_episode]\n",
     "# Transition @ minimum reward\n",
-    "trans_min_reward = transitions[rewards.index(min_reward)]\n",
+    "trans_min_reward = transitions[reward_min_episode]\n",
     "print(f'Transition at max reward: {trans_max_reward:,}')\n",
     "print(f'Transition at min reward: {trans_min_reward:,}')"
    ]
